After SonarQube refactoring